# smsly-code

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml
contracts/: INTEGRATION_CONTRACTS.md  JULES_PHASE1_PROMPTS.md
docs/: README.md
plans/: 01_git_protocol.md  02_auth_identity.md  03_repo_social.md  04_code_review.md  05_project_management.md  06_cicd_actions.md  07_security_mip.md  08_frontend_foundation.md  09_frontend_features.md  10_infra_search.md
smsly-code-api/: README.md  go.mod  go.sum
smsly-code-api/cmd/server/: main.go
smsly-code-api/internal/auth/: smsly_oauth.go  smsly_oauth_test.go
smsly-code-api/internal/cicd/: parser.go  parser_test.go
smsly-code-api/internal/config/: config.go
smsly-code-api/internal/database/: database.go  db.go
smsly-code-api/internal/handlers/: auth.go  issue.go  project.go  repo.go
smsly-code-api/internal/middleware/: auth.go
smsly-code-api/internal/mip/: chain.go  crypto.go  merkle.go  mip_test.go  stamp.go  verify.go
smsly-code-api/internal/models/: issue.go  label.go  milestone.go  models.go  project.go  repository.go  user.go  (+1 more)
smsly-code-api/migrations/: 000002_project_management.sql  000004_mip_stamps.sql  000010_workflows.sql
smsly-code-web/: README.md  package-lock.json  package.json
smsly-code-web/app/: layout.tsx  page.tsx
smsly-code-web/types/: index.ts
smsly-git/: Cargo.toml  README.md
smsly-git/src/: config.rs  error.rs  git_http.rs  hooks.rs  lib.rs  main.rs  repo.rs  types.rs
smsly-git/src/transport/: http.rs  mod.rs
(+11 files in other folders)
