[package]
name = "smsly-git"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Using vendored-openssl to avoid system dependency issues
git2 = { version = "0.19", features = ["vendored-openssl"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
