[package]
name = "smsly-git"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
git2 = { version = "0.19", features = ["vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"
tempfile = "3.0"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
base64 = "0.22"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "smsly-git-server"
path = "src/main.rs"
